fixed title font size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -639,6 +639,9 @@ footer ul li a {
     .container {
         width: 100%;
     }
+    .title  {
+        font-size: 24px;
+    }
 }
 
 /* for small */
